# cazip

./: .gitignore  Cargo.toml  makefile  out.txt
crates/lib_lz77/: Cargo.toml
crates/lib_lz77/src/: default.rs  lib.rs
src/: bit.rs  cli.rs  error.rs  file_tree.rs  huffman.rs  lz77.rs  main.rs  script.rs  utils.rs  venv.rs
src/codecs/: command_line.rs  gzip.rs  mod.rs  sevenz.rs  xz.rs  zip.rs
src/deflate/: encode.rs  mod.rs
tests/: test_7z.sh  test_gz.sh  test_xz.sh  test_zip.sh
