[package]
name = "ca-zip"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = { version = "1.0.17" }
zip = { version = "2.2.2", features = ["zstd", "aes-crypto", "deflate-zopfli"] }
dary_heap = "0.3.5"
lib_lz77 = { path = "crates/lib_lz77" }
clap = { version = "4.5.29", features = ["derive"] }
anyhow = "1.0"
walkdir = "2"
thiserror = "1"
log4rs = "1.3.0"
log = "0.4"
tar = "0.4"
sync_file = "0.2.9"
rayon = "1.10.0"
sevenz-rust = "0.6.1"

[workspace]
members = [
    "crates/lib_lz77",
]
