[package]
name = "ca-zip"
version = "0.1.0"
edition = "2024"

[dependencies]
flate2 = { version = "1.0.17", features = ["zlib-ng"]}
zip = { version = "2.2.2", features = ["zstd", "aes-crypto", "deflate-zopfli"] }
dary_heap = "0.3.5"
clap = { version = "4.5.29", features = ["derive"] }
anyhow = "1.0"
walkdir = "2"
thiserror = "1"
log4rs = "1.3.0"
log = "0.4"
tar = "0.4"
sync_file = "0.2.9"
rayon = "1.10.0"
ripunzip = "2.0.1"
sevenz-rust2 = "0.11.0"
xz2 = { version = "0.1.7" }
serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
regex = { version = "1.11.1", features = [] }
chrono = "0.4"
serde_json = "1.0.140"
env_logger = "0.10.2"